[Fix] Home/Nav: spacing

--- a/src/scss/_ctabox.scss
+++ b/src/scss/_ctabox.scss
@@ -70,6 +70,8 @@
 
 	&__image {
 		@include overflow-image();
+		width: 100%;
+		max-width: 100%;
 	}
 
 	&__title {
