--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -32,7 +32,7 @@ $nav-height: 90px;
 				padding: 0 25px;
 			}
 			.nav__sublist {
-				padding-right: 25px;
+				// padding-right: 25px;
 			}
 		}
 
