--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -44,9 +44,6 @@ $homeSectionPaddingTop: 80px;
 
 		img {
 			max-width: 100%;
-			@media (min-width: 768px) {
-				max-width: calc(100% - 20px);
-			}
 		}
 	}
 
